--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -935,7 +935,7 @@
     <string name="tx_wifi_speed" msgid="2368986629172050673">"Tốc độ của liên kết truyền"</string>
     <string name="rx_wifi_speed" msgid="5167966079215111232">"Tốc độ nhận đường dẫn liên kết"</string>
     <string name="wifi_frequency" msgid="3120998420184702834">"Tần số"</string>
-    <string name="wifi_ip_address" msgid="8903577251845268209">"Địa chỉa IP"</string>
+    <string name="wifi_ip_address" msgid="8903577251845268209">"Địa chỉ IP"</string>
     <string name="passpoint_label" msgid="6513669696739302866">"Đã lưu thông qua"</string>
     <string name="passpoint_content" msgid="5219226173518418335">"Thông tin xác thực <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="wifi_eap_method" msgid="3776009521349381742">"Phương pháp EAP"</string>
